; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/helix/rev2/keymaps/edvorakjp/extr_oled.c_iota_gfx_task_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/helix/rev2/keymaps/edvorakjp/extr_oled.c_iota_gfx_task_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.CharacterMatrix = type { i32 }

@is_master = common dso_local global i64 0, align 8
@display = common dso_local global i32 0, align 4
@debug_enable = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iota_gfx_task_user() #0 {
  %1 = alloca %struct.CharacterMatrix, align 4
  %2 = call i32 @matrix_clear(%struct.CharacterMatrix* %1)
  %3 = load i64, i64* @is_master, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %0
  %6 = call i32 @render_status(%struct.CharacterMatrix* %1)
  br label %9

7:                                                ; preds = %0
  %8 = call i32 @render_logo(%struct.CharacterMatrix* %1)
  br label %9

9:                                                ; preds = %7, %5
  %10 = call i32 @matrix_update(i32* @display, %struct.CharacterMatrix* %1)
  ret void
}

declare dso_local i32 @matrix_clear(%struct.CharacterMatrix*) #1

declare dso_local i32 @render_status(%struct.CharacterMatrix*) #1

declare dso_local i32 @render_logo(%struct.CharacterMatrix*) #1

declare dso_local i32 @matrix_update(i32*, %struct.CharacterMatrix*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
